--- a/index.html
+++ b/index.html
@@ -11,23 +11,24 @@
     <div class="container">
         <h1>Calculator</h1>
 
-        <form class="calculator" id="calculator">
-            <div class="item-block item-block1" id="output">0</div>
-            <div class="item-block item-block2" id="ac">AC</div>
-            <div class="item-block item-block3" id="one">1</div>
-            <div class="item-block item-block4" >-</div>
-            <div class="item-block item-block5" id="two">2</div>
-            <div class="item-block item-block6" id="three">3</div>
-            <div class="item-block item-block7">+</div>
-            <div class="item-block item-block8" id="four">4</div>
-            <div class="item-block item-block9" id="five">5</div>
-            <div class="item-block item-block10">X</div>
-            <div class="item-block item-block11" id="six">6</div>
-            <div class="item-block item-block12" id="seven">7</div>
-            <div class="item-block item-block13">/</div>
-            <div class="item-block item-block14" id="eight">8</div>
-            <div class="item-block item-block15" id="nine">9</div>
-            <div class="item-block item-block16">=</div>
+        <form class="calculator" id="calculator" name="calculator">
+            <input type="text" class="item-block item-block1" id="output">
+            <input type="button" class="item-block item-block2 operator" id="AC" value="AC" onclick="refresh()">
+            <input type="button" class="item-block item-block3 number" value="1" id="one" onclick="display('1')">
+            <input  type="button" class="item-block item-block4 operator" value="-" onclick="display('-')">
+            <input type="button" class="item-block item-block5 number" value="2" id="two" onclick="display('2')">
+            <input type="button" class="item-block item-block6 number" value="3" id="three" onclick="display('3')">
+            <input type="button" class="item-block item-block7 operator" value="+" onclick="display('+')">
+            <input type="button" class="item-block item-block8 number" id="four" value="4" onclick="display('4')">
+            <input type="button" class="item-block item-block9 number" id="five" value="5" onclick="display('5')">
+            <input type="button" class="item-block item-block10 operator" value="X" onclick="display('X')">
+            <input type="button" class="item-block item-block11 number" id="six" value="6" onclick="display('6')">
+            <input type="button" class="item-block item-block12 number" id="seven" value="7" onclick="display('7')">
+            <input type="button" class="item-block item-block13 operator"  value="/" onclick="display('/')">
+            <input type="button" class="item-block item-block14 number" id="eight"  value="8" onclick="display('8')">
+            <input type="button" class="item-block item-block15 number" id="nine" value="9" onclick="display('9')">
+            <input type="button" class="item-block item-block16 number" id="nine" value="0" onclick="display('0')">
+            <input type="button" class="item-block item-block17 operator" value="=" onclick="equal()">
         </form>
     </div>
     <script src="app.js"></script>
