fixed the Times button and height on box

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h1>Calculator</h1>
 
         <form class="calculator" id="calculator" name="calculator">
+            <!-- <input> -->
             <input type="text" class="item-block item-block1" id="output">
             <input type="button" class="item-block item-block2 operator" id="AC" value="AC" onclick="refresh()">
             <input type="button" class="item-block item-block3 number" value="1" id="one" onclick="display('1')">
@@ -21,7 +22,7 @@
             <input type="button" class="item-block item-block7 operator" value="+" onclick="display('+')">
             <input type="button" class="item-block item-block8 number" id="four" value="4" onclick="display('4')">
             <input type="button" class="item-block item-block9 number" id="five" value="5" onclick="display('5')">
-            <input type="button" class="item-block item-block10 operator" value="X" onclick="display('X')">
+            <input type="button" class="item-block item-block10 operator" value="X" onclick="display('*')">
             <input type="button" class="item-block item-block11 number" id="six" value="6" onclick="display('6')">
             <input type="button" class="item-block item-block12 number" id="seven" value="7" onclick="display('7')">
             <input type="button" class="item-block item-block13 operator"  value="/" onclick="display('/')">
